--- a/UI/src/CFG/ControlFileGenerator/ControlFileGeneratorUI.form
+++ b/UI/src/CFG/ControlFileGenerator/ControlFileGeneratorUI.form
@@ -110,19 +110,14 @@
                               <Component id="jPanel4" max="32767" attributes="0"/>
                               <Component id="jPanel5" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jPanel7" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                                  <Component id="jPanel12" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
                           <EmptySpace max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="jPanel12" max="32767" attributes="0"/>
+                              <Component id="jPanel7" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                           <Component id="jPanel6" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -155,12 +150,12 @@
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="jPanel2" max="32767" attributes="0"/>
+                                  <Component id="jPanel3" max="32767" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="22" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -199,7 +194,7 @@
                         <DimensionLayout dim="1">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace min="0" pref="11" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="2" attributes="0">
                                       <Component id="seqFileLabel" alignment="2" min="-2" max="-2" attributes="0"/>
                                       <Component id="seqFileField" alignment="2" min="-2" max="-2" attributes="0"/>
@@ -364,7 +359,7 @@
                         <DimensionLayout dim="1">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace max="-2" attributes="0"/>
+                                  <EmptySpace pref="12" max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="2" attributes="0">
                                       <Component id="mcmcIterationsLabel" alignment="2" min="-2" max="-2" attributes="0"/>
                                       <Component id="mcmcIterationsField" alignment="2" min="-2" max="-2" attributes="0"/>
@@ -389,7 +384,6 @@
                                       <Component id="logsPerLineLabel" alignment="2" min="-2" max="-2" attributes="0"/>
                                       <Component id="logsPerLineField" alignment="2" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace max="32767" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
@@ -545,7 +539,7 @@
                                   <Group type="102" attributes="0">
                                       <Component id="thauThetaPrintLabel" linkSize="7" min="-2" pref="61" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                                      <Component id="thauThetaPrintField" min="-2" pref="145" max="-2" attributes="0"/>
+                                      <Component id="tauThetaPrintField" min="-2" pref="145" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" attributes="0">
                                       <Component id="tauThetaBetaLabel" linkSize="7" min="-2" max="-2" attributes="0"/>
@@ -567,7 +561,7 @@
                               <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="thauThetaPrintLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="thauThetaPrintField" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="tauThetaPrintField" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -643,7 +637,7 @@
                         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tauThetaBetaFieldKeyTyped"/>
                       </Events>
                     </Component>
-                    <Component class="javax.swing.JTextField" name="thauThetaPrintField">
+                    <Component class="javax.swing.JTextField" name="tauThetaPrintField">
                       <Properties>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Tahoma" size="12" style="0"/>
@@ -654,9 +648,9 @@
                         <Property name="text" type="java.lang.String" value="10000"/>
                       </Properties>
                       <Events>
-                        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="thauThetaPrintFieldFocusGained"/>
-                        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="thauThetaPrintFieldFocusLost"/>
-                        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="thauThetaPrintFieldKeyTyped"/>
+                        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="tauThetaPrintFieldFocusGained"/>
+                        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="tauThetaPrintFieldFocusLost"/>
+                        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tauThetaPrintFieldKeyTyped"/>
                       </Events>
                     </Component>
                   </SubComponents>
@@ -965,8 +959,8 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jPanel9" alignment="0" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="jPanel8" pref="0" max="32767" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jPanel8" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -1005,7 +999,7 @@
                         <DimensionLayout dim="1">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace max="32767" attributes="0"/>
+                                  <EmptySpace pref="11" max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="findFinetunesLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="findFinetunesFalseRadioButton" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -1118,7 +1112,7 @@
                             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                               <Font name="Tahoma" size="12" style="0"/>
                             </Property>
-                            <Property name="text" type="java.lang.String" value="find-finetunes-num-step"/>
+                            <Property name="text" type="java.lang.String" value="find-finetunes-num-steps"/>
                             <Property name="toolTipText" type="java.lang.String" value="&lt;html&gt;&lt;p&gt;The number of update steps for the automatic finetune finding procedure&lt;/p&gt;&#xa;&lt;p&gt;&lt;b&gt;Optional,&lt;/b&gt; default: 100&lt;/p&gt;&lt;/html&gt;"/>
                           </Properties>
                         </Component>
@@ -2062,7 +2056,7 @@
                               <Component id="jScrollPane8" min="-2" pref="147" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jLabel27" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="72" max="32767" attributes="0"/>
+                              <EmptySpace pref="260" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -2178,8 +2172,8 @@
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Save Control File">
-                <Property name="tabTitle" type="java.lang.String" value="Save Control File"/>
+              <JTabbedPaneConstraints tabName="Load / Save">
+                <Property name="tabTitle" type="java.lang.String" value="Load / Save"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -2193,15 +2187,16 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="346" max="-2" attributes="0"/>
-                                  <Component id="generateFileButton" min="-2" pref="97" max="-2" attributes="0"/>
+                              <Group type="102" attributes="0">
+                                  <Component id="CFGLoadButton" linkSize="22" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="generateFileButton" linkSize="22" min="-2" pref="97" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" max="-2" attributes="0"/>
-                                  <Component id="exitButton" min="-2" pref="91" max="-2" attributes="0"/>
+                                  <Component id="exitButton" linkSize="22" min="-2" pref="91" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jPanel10" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="jPanel10" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -2214,6 +2209,7 @@
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="exitButton" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="generateFileButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="CFGLoadButton" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
@@ -2225,7 +2221,7 @@
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                        <TitledBorder title="Control File">
+                        <TitledBorder title="Load/Save Control File">
                           <Font PropertyName="font" name="Tahoma" size="14" style="0"/>
                           <Color PropertyName="color" blue="ff" green="33" red="33" type="rgb"/>
                         </TitledBorder>
@@ -2311,6 +2307,17 @@
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="exitButtonActionPerformed"/>
+                  </Events>
+                </Component>
+                <Component class="javax.swing.JButton" name="CFGLoadButton">
+                  <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Tahoma" size="12" style="0"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="Load"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CFGLoadButtonActionPerformed"/>
                   </Events>
                 </Component>
               </SubComponents>
